--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
@@ -8,7 +11,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/sitio.webmanifest" />
 
-    <title>..:: Oráculo ::..</title>
+    <title>FulHaus</title>
     <!-- <meta name="description" content="Descripción del sitio...." /> -->
 
     <!-- OpenGraph -->
@@ -24,7 +27,10 @@
   </head>
   <body>
     <div id="contenedor">
-      <h1 id="tituloPagina">Animalito colombiano (Oráculo)</h1>
+      <h1 id="tituloPagina"> ¿Qué miembro de FulHaus eres?</h1>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&display=swap" rel="stylesheet">
 
       <img id="foto" src="https://cdn.glitch.global/42819e4b-9ae0-444e-a3df-b48e5b9cc0fd/robot.jpg?v=1676961368525" />
 
