cambios de color

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2 class="tituloPrediccion" id="titulo1"></h2>
       <p class="prediccion" id="prediccion1"></p>
       
-      <button id="boton">Nueva Predicción</button>
+      <button id="boton"> CLICK</button>
     </div>
   </body>
 </html>
